# wpmanager

./: .gitignore  app.py  config.py  install.sh  models.py  pyproject.toml
instance/: wordpress_manager.db
routes/: auth.py  backups.py  database.py  domains.py  files.py  monitoring.py  wordpress.py
static/css/: style.css
static/js/: backups.js  database.js  domains.js  files.js  main.js  monitoring.js  wordpress.js
templates/: backups.html  dashboard.html  database.html  domains.html  files.html  layout.html  login.html  monitoring.html  profile.html  users.html  wordpress.html
utils/: backup.py  backup_simple.py  database.py  file_manager.py  monitoring.py  sftp.py  validator.py  wordpress.py
